# Papito-Mamito-AI

./: .gitignore  DEPLOY_AUTONOMOUS.md  Dockerfile  Dockerfile.autonomous  EXECUTIVE_SUMMARY.md  Procfile  QUICK_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE_CARD.md  README.md  STRATEGIC_IMPROVEMENTS_ROADMAP.md  docker-compose.yml  env.example  fan_portal.py  firebase.json  firebase_creds_base64.txt  launch-1000-followers-campaign.ps1  railway.autonomous.toml  railway.toml  render.yaml  requirements.txt  run_autonomous.py  run_multiplatform.py  test_add_value_integration.py  test_autonomous_integration.py
apps/papito_core/: README.md  demo_autonomous_post.py  demo_system.py  pyproject.toml  results.txt  test_output.txt
apps/papito_core/src/: content_test_output.txt  test_content_variety.py
apps/papito_core/src/papito_core/: __init__.py  api.py  cli.py  config.py  constants.py  fanbase.py  generation.py  models.py  settings.py  utils.py  voice.py
apps/papito_core/src/papito_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/papito_core/src/papito_core/add_value/: __init__.py  evaluator.py  framework.py  growth_engine.py
apps/papito_core/src/papito_core/analytics/: __init__.py  predictive.py
apps/papito_core/src/papito_core/automation/: __init__.py  analytics.py  autonomous_agent.py  autonomous_scheduler.py  (+2 more)
apps/papito_core/tests/: test_ai_responder.py  test_content_adapter.py  test_content_scheduler.py  test_fan_engagement.py  test_firebase_client.py  test_monitoring.py  test_predictive_analytics.py  test_review_queue.py
(+125 files in other folders)
