[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papito-core"
version = "0.2.0"
description = "Autonomous creative engine for Papito Mamito AI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Value Adders World", email = "team@valueadders.world" }
]
license = { text = "MIT" }
keywords = ["afrobeat", "ai-music", "autonomous-agents", "papito-mamito", "social-media"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pydantic>=2.5,<3.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "httpx>=0.27,<0.28",
  "pydantic-settings>=2.3,<3.0",
  "firebase-admin>=6.0,<7.0",
  "openai>=1.0,<2.0",
  "anthropic>=0.18,<1.0",
  "apscheduler>=3.10,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-mock>=3.12,<4.0",
  "typer>=0.12,<1.0",
  "ruff>=0.6.0",
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.23,<0.25"
]

api = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.23,<0.25"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.typer]
theming = "rich"

[project.scripts]
papito = "papito_core.cli:app"
